trying to fix button not working on mobile #2

--- a/css/style.css
+++ b/css/style.css
@@ -663,6 +663,8 @@ body {
         display: inline-block;
         margin-top: 2.4rem; } }
   .booking-container__bottom-bg {
+    position: relative;
+    z-index: -1;
     width: 69vw;
     height: 32rem;
     background-color: rgba(92, 103, 121, 0.08);
@@ -818,7 +820,6 @@ body {
   .form__operator {
     color: #9e7f66;
     cursor: pointer;
-    padding: 1rem 0;
     transition: opacity 0.4s; }
     .form__operator:hover {
       opacity: 0.5; }
