--- a/sass/pages/booking/_container.scss
+++ b/sass/pages/booking/_container.scss
@@ -70,6 +70,8 @@
   }
 
   &__bottom-bg {
+    position: relative;
+    z-index: -1;
     width: 69vw;
     height: 32rem;
     background-color: rgba($color-grey, 0.08);
