--- a/sass/pages/booking/_form.scss
+++ b/sass/pages/booking/_form.scss
@@ -176,7 +176,6 @@
     color: $color-primary;
     cursor: pointer;
     transition: opacity 0.4s;
-    z-index: 10;
 
     &:hover {
       opacity: 0.5;
@@ -192,6 +191,5 @@
     border-color: $color-primary-black;
     padding-left: 0; // removing padding on sides - button's width is adjusted to the flex container
     padding-right: 0;
-    z-index: 10;
   }
 }
